--- a/app/css/main.css
+++ b/app/css/main.css
@@ -18,6 +18,13 @@ body {
 }*/
 /* test for image */
 #content .image_container {
+  /* overflow-x: hidden; */
+  /* overflow-y: overlay; */
+  /* width: 30em; */
+  overflow-x: hidden;
+  white-space: nowrap;
+  padding-top: 10%;
+  padding-bottom: 10%;
   padding-right: 200px;
   padding-left: 200px;
 }
@@ -81,6 +88,7 @@ video {
   /*background-color: #fff;*/
   transition-delay: 0.5s;
   width: 100%;
+  height: 100%;
   min-height: 100%;
   display: none;
 }
@@ -438,3 +446,40 @@ transform: translateY(-4px) rotate(0deg);
   }
 }
 /*menu-animation:end*/
+
+/* gallery */
+
+#gallery {
+  text-align: center;
+  z-index: 9999;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  background-color: black;
+  display: none;
+}
+#gallery #gallery_img {
+  max-width: 100%;
+  max-height: 100%;
+  border: 1px solid white; 
+}
+#gallery #close_gallery {
+  position: absolute;
+  color: white;
+  right: 10px;
+  top: 10px;
+  font-size: 32px;
+  cursor: pointer;
+}
+
+/* fb */
+#fb-share-button-style-main {
+  position: absolute;
+  top: 482px;
+  right: 54px;
+}
+
+.fb-share-button-style-photo {
+  position: absolute;
+  bottom: 23px;
+}
