--- a/views/index.html
+++ b/views/index.html
@@ -13,7 +13,8 @@
     <meta property="og:title" content="KhurshudyanPhoto" />
     <meta property="og:updated_time" content="1465679659" />
     <meta property="fb:admins" content="100001332895153"/>
-    <meta property="og:image" name="image" content="app/img/fb_share.jpg">
+    <meta property="og:image" name="image" >
+    <!-- content="app/img/fb_share.jpg" -->
     <meta property="fb:app_id" content="138460513240067">
     <script type="text/javascript" data-main="app/js/app.js" src="app/vendor/require/require.js"></script>
   </head>
