Frontend: HTML: Change facebook og:url

--- a/views/index.html
+++ b/views/index.html
@@ -8,13 +8,12 @@
     <!-- <link rel="stylesheet" type="text/css" href="app/css/demo.css" /> -->
     <link rel="stylesheet" type="text/css" href="app/css/load_more.css" />
     <!-- for fb analitics -->
-    <meta property="og:url" content="https://dfb78e840aef631ca191c51b285d61902d5df55c.googledrive.com/host/0B1QTrCjvV3xNRldZRzNldlBfMVk/" /> 
+    <meta property="og:url" content="http://khurshudyan.com" /> 
     <meta property="og:type" content="website" />
     <meta property="og:title" content="KhurshudyanPhoto" />
     <meta property="og:updated_time" content="1465679659" />
     <meta property="fb:admins" content="100001332895153"/>
-    <meta property="og:image" name="image" >
-    <!-- content="app/img/fb_share.jpg" -->
+    <meta property="og:image" name="image" content="app/img/fb_share.jpg">
     <meta property="fb:app_id" content="138460513240067">
     <script type="text/javascript" data-main="app/js/app.js" src="app/vendor/require/require.js"></script>
   </head>
