--- a/views/index.jade
+++ b/views/index.jade
@@ -7,7 +7,7 @@ html
     link(rel='stylesheet', type='text/css', href='app/css/component.css')
     link(rel='stylesheet', type='text/css', href='app/css/load_more.css')
     // for fb analitics
-    meta(property='og:url', content='http://khurshudyan.com')
+    meta(property='og:url', content='http://khurshudyan.com#{originalUrl}')
     meta(property='og:type', content='website')
     meta(property='og:title', content='KhurshudyanPhoto')
     meta(property='og:updated_time', content='1465679659')
