--- a/public/app/css/main.css
+++ b/public/app/css/main.css
@@ -27,6 +27,13 @@ body {
   padding-bottom: 10%;
   padding-right: 200px;
   padding-left: 200px;
+  -webkit-touch-callout: none; /* iOS Safari */
+  -webkit-user-select: none;   /* Chrome/Safari/Opera */
+  -khtml-user-select: none;    /* Konqueror */
+  -moz-user-select: none;      /* Firefox */
+  -ms-user-select: none;       /* Internet Explorer/Edge */
+  user-select: none;           /* Non-prefixed version, currently
+                                  not supported by any browser */
 }
 #content .image_container img {
   /*max-width: 70%;*/
