Frontend: CSS: fix load_more botton bug

--- a/public/app/css/load_more.css
+++ b/public/app/css/load_more.css
@@ -1,8 +1,11 @@
 #content .load_more_section {
+  position: absolute;
+  display: inline-block;
   text-align: center;
   padding-bottom: 20px;
   padding-top: 20px;
   cursor: pointer;
+  bottom: 25px;
 }
 
 .load_more_section nav a {
