Frontend: Bacbone, CSS: Create image_slider on portraits page

--- a/views/index.jade
+++ b/views/index.jade
@@ -76,6 +76,9 @@ html
       #contact
     #gallery
       span#close_gallery X
+      span#right_img.slide_button >
+      span#left_img.slide_button <
+      span#gallery_preloader
       img#gallery_img
 // https://tinypng.com/
 // https://compressor.io/
