--- a/public/app/css/main.css
+++ b/public/app/css/main.css
@@ -478,13 +478,16 @@ transform: translateY(-4px) rotate(0deg);
   width: 100%;
   height: 100%;
   position: absolute;
-  background-color: black;
+  background-color: rgba(0,0,0,0.85);
   display: none;
+  padding-left: 4%;
+  padding-right: 4%;
+  padding-top: 2%;
+  padding-bottom: 2%;
 }
 #gallery #gallery_img {
   max-width: 100%;
   max-height: 100%;
-  border: 1px solid white; 
 }
 #gallery #close_gallery {
   position: absolute;
@@ -495,6 +498,60 @@ transform: translateY(-4px) rotate(0deg);
   cursor: pointer;
 }
 
+#gallery .slide_button {
+  position: absolute;
+  font-size: 50px;
+  color: white;
+  top: 45%;
+  cursor: pointer;
+}
+#gallery #left_img {
+  left: 15px;
+}
+#gallery #right_img {
+  right: 15px;
+}
+
+#gallery #gallery_preloader {
+  display: none;
+  position: absolute;
+  left: 46%;
+  top: 46%;
+  width: 100px;
+  height: 100px;
+  /*border-left: 3px solid red;*/
+  border-top: 3px solid red;
+  border-bottom: 3px solid red;
+  border-radius: 50px;
+  -webkit-animation: spiner 1.5s linear infinite;
+          animation: spiner 1.5s linear infinite; 
+}
+
+
+@-webkit-keyframes spiner {
+    0%   {
+        -webkit-transform: rotate(0deg);  /* Chrome, Opera 15+, Safari 3.1+ */
+        -ms-transform: rotate(0deg);  /* IE 9 */
+        transform: rotate(0deg);  /* Firefox 16+, IE 10+, Opera */
+    }
+    100% {
+        -webkit-transform: rotate(360deg);  /* Chrome, Opera 15+, Safari 3.1+ */
+        -ms-transform: rotate(360deg);  /* IE 9 */
+        transform: rotate(360deg);  /* Firefox 16+, IE 10+, Opera */
+    }
+}
+@keyframes spin {
+    0%   {
+        -webkit-transform: rotate(0deg);  /* Chrome, Opera 15+, Safari 3.1+ */
+        -ms-transform: rotate(0deg);  /* IE 9 */
+        transform: rotate(0deg);  /* Firefox 16+, IE 10+, Opera */
+    }
+    100% {
+        -webkit-transform: rotate(360deg);  /* Chrome, Opera 15+, Safari 3.1+ */
+        -ms-transform: rotate(360deg);  /* IE 9 */
+        transform: rotate(360deg);  /* Firefox 16+, IE 10+, Opera */
+    }
+}
 /* fb */
 #fb-share-button-style-main {
   border: none;
