--- a/views/index.jade
+++ b/views/index.jade
@@ -17,18 +17,19 @@ html
     script(type='text/javascript', data-main='/app/js/app.js', src='/app/vendor/require/require.js')
   body
     #loading
-      #loading-center
-        #loading-center-absolute
-          .object
-          .object
-          .object
-          .object
-          .object
-          .object
-          .object
-          .object
-          .object
-          .object
+      //- #loading-center
+      //-   #loading-center-absolute
+      //-     .object
+      //-     .object
+      //-     .object
+      //-     .object
+      //-     .object
+      //-     .object
+      //-     .object
+      //-     .object
+      //-     .object
+      //-     .object
+      #main_preloader
     #content
       #home
         //
@@ -80,6 +81,9 @@ html
       span#left_img.slide_button <
       span#gallery_preloader
       img#gallery_img
+    #copyright 
+      p All rights reserved
+      p Copyright &copy; 2016 KhurshudyanPhoto
 // https://tinypng.com/
 // https://compressor.io/
 // 
