--- a/public/app/css/main.css
+++ b/public/app/css/main.css
@@ -87,7 +87,7 @@ video {
   position: absolute;
 }
 #content > div {
-  text-align: center;
+  /*text-align: center;*/
   background: no-repeat center center fixed; 
   -webkit-background-size: cover;
   -moz-background-size: cover;
@@ -108,7 +108,7 @@ a.menu_tabs_button {
 }
 /*preloader*/
 #loading{
-  background-color: #45b29d;
+  background-color: rgba(69, 178, 157, 0.5);
   opacity: 0.92;
   height: 100%;
   width: 100%;
@@ -512,17 +512,31 @@ transform: translateY(-4px) rotate(0deg);
   right: 15px;
 }
 
+#main_preloader {
+  width: 300px;
+  height: 300px;
+  border-radius: 150px;
+  top: 50%;
+  left: 50%;
+  margin-top: -150px;
+  margin-left: -150px;
+  border-color: #eee;
+}
 #gallery #gallery_preloader {
   display: none;
-  position: absolute;
-  left: 46%;
-  top: 46%;
   width: 100px;
   height: 100px;
-  /*border-left: 3px solid red;*/
-  border-top: 3px solid red;
-  border-bottom: 3px solid red;
+  left: 46%;
+  top: 46%;
   border-radius: 50px;
+  border-color: red;
+}
+
+#gallery #gallery_preloader, #main_preloader {
+  position: absolute;
+  /*border-left: 3px solid red;*/
+  border-top: 3px solid;
+  border-bottom: 3px solid;
   -webkit-animation: spiner 1.5s linear infinite;
           animation: spiner 1.5s linear infinite; 
 }
@@ -562,4 +576,26 @@ transform: translateY(-4px) rotate(0deg);
 
 .fb-share-button-style-photo {
   bottom: 23px;
+}
+
+/* copyright */
+
+#copyright {
+  line-height: 0.4;
+  width: 326px;
+  text-align: center;
+  left: 50%;
+  margin-left: -163px;
+  background-color: black;
+  position: absolute;
+  bottom: -17px;
+  border-top-left-radius: 100px;
+  border-top-right-radius: 100px;
+  border: 3px solid black;
+  color: white;
+  padding: 10px;
+}
+
+#copyright p:first-child {
+  margin: 0; 
 }
