--- a/public/app/css/main.css
+++ b/public/app/css/main.css
@@ -1,4 +1,5 @@
 body {
+  overflow: hidden;
   margin: 0;
   padding: 0;
   /*background: url(../img/main.jpg) no-repeat center center fixed; */
@@ -21,10 +22,13 @@ body {
   /* overflow-x: hidden; */
   /* overflow-y: overlay; */
   /* width: 30em; */
+  position: absolute;
+  top: 50%;
+  margin-top: -200px;
   height: 100%;
   overflow-x: hidden;
   white-space: nowrap;
-  padding-top: 10%;
+  /*padding-top: 10%;*/
   padding-right: 200px;
   padding-left: 200px;
   -webkit-touch-callout: none; /* iOS Safari */
@@ -488,6 +492,9 @@ transform: translateY(-4px) rotate(0deg);
 #gallery #gallery_img {
   max-width: 100%;
   max-height: 100%;
+  -webkit-box-shadow: 0 8px 6px -6px black;
+     -moz-box-shadow: 0 8px 6px -6px black;
+          box-shadow: 0 8px 6px -6px black;
 }
 #gallery #close_gallery {
   position: absolute;
@@ -520,21 +527,23 @@ transform: translateY(-4px) rotate(0deg);
   left: 50%;
   margin-top: -150px;
   margin-left: -150px;
-  border-color: #eee;
+  border-color: #001f3f;
 }
 #gallery #gallery_preloader {
   display: none;
-  width: 100px;
-  height: 100px;
-  left: 46%;
-  top: 46%;
-  border-radius: 50px;
-  border-color: red;
+  width: 200px;
+  border-left: 3px solid #FF4136;
+  border-right: 3px solid #FF4136;
+  height: 200px;
+  left: 50%;
+  top: 50%;
+  margin-top: -100px;
+  margin-left: -100px;
+  border-radius: 100px;
 }
 
 #gallery #gallery_preloader, #main_preloader {
   position: absolute;
-  /*border-left: 3px solid red;*/
   border-top: 3px solid;
   border-bottom: 3px solid;
   -webkit-animation: spiner 1.5s linear infinite;
