Frontend: CSS: add photos

--- a/public/app/css/main_slide.css
+++ b/public/app/css/main_slide.css
@@ -60,7 +60,7 @@
     animation-delay: 6s;
 }
 .cb-slideshow li:nth-child(3) span {
-    background-image: url(../img/commercial/7.jpg);
+    background-image: url(../img/commercial/21.jpg);
     -webkit-animation-delay: 12s;
     -moz-animation-delay: 12s;
     -o-animation-delay: 12s;
@@ -68,7 +68,7 @@
     animation-delay: 12s;
 }
 .cb-slideshow li:nth-child(4) span {
-    background-image: url(../img/nature/main.jpg);
+    background-image: url(../img/nature/44.jpg);
     -webkit-animation-delay: 18s;
     -moz-animation-delay: 18s;
     -o-animation-delay: 18s;
