--- a/public/app/css/main.css
+++ b/public/app/css/main.css
@@ -491,7 +491,7 @@ transform: translateY(-4px) rotate(0deg);
 }
 #gallery #gallery_img {
   max-width: 100%;
-  max-height: 100%;
+  height: 100%;
   -webkit-box-shadow: 0 8px 6px -6px black;
      -moz-box-shadow: 0 8px 6px -6px black;
           box-shadow: 0 8px 6px -6px black;
@@ -608,3 +608,13 @@ transform: translateY(-4px) rotate(0deg);
 #copyright p:first-child {
   margin: 0; 
 }
+
+/*@media(min-width:768px) {
+  .image_container {
+    top: 0 !important;
+    margin-top: 0 !important; 
+  }
+  .load_more_section {
+    padding-bottom: 0px !important;
+  }
+}*/
