--- a/views/index.jade
+++ b/views/index.jade
@@ -69,14 +69,14 @@ html
       #about
       #contact
     #gallery
-      span#close_gallery X
-      span#right_img.slide_button >
-      span#left_img.slide_button <
+      div#close_gallery
+      span#right_img.slide_button
+      span#left_img.slide_button
       span#gallery_preloader
       img#gallery_img
     #copyright 
       p © COPYRIGHT 2016 Khurshudyan Photoghrapher.
-      a Web Design &amp; Development by SurenAt
+      a(href="https://www.facebook.com/suro.atoyan" target="blank") Web Design &amp; Development by SurenAt
 // https://tinypng.com/
 // https://compressor.io/
 // 
