--- a/public/app/css/component.css
+++ b/public/app/css/component.css
@@ -105,13 +105,13 @@
 	transition: transform 0.4s;
 }
 
-.no-touch .cs-style-2 figure:hover img,
+/*.no-touch .cs-style-2 figure:hover img,
 .cs-style-2 figure.cs-hover img {
 	-webkit-transform: translateY(-90px);
 	-moz-transform: translateY(-90px);
 	-ms-transform: translateY(-90px);
 	transform: translateY(-90px);
-}
+}*/
 
 .cs-style-2 figcaption {
 	height: 90px;
@@ -137,13 +137,13 @@
 	transition: transform 0.4s;
 }
 
-.no-touch .cs-style-3 figure:hover img,
+/*.no-touch .cs-style-3 figure:hover img,
 .cs-style-3 figure.cs-hover img {
 	-webkit-transform: translateY(-50px);
 	-moz-transform: translateY(-50px);
 	-ms-transform: translateY(-50px);
 	transform: translateY(-50px);
-}
+}*/
 
 .cs-style-3 figcaption {
 	height: 100px;
@@ -160,7 +160,7 @@
 	transition: transform 0.4s, opacity 0.1s 0.3s;
 }
 
-.no-touch .cs-style-3 figure:hover figcaption,
+/*.no-touch .cs-style-3 figure:hover figcaption,
 .cs-style-3 figure.cs-hover figcaption {
 	opacity: 1;
 	-webkit-transform: translateY(0px);
@@ -170,7 +170,7 @@
 	-webkit-transition: -webkit-transform 0.4s, opacity 0.1s;
 	-moz-transition: -moz-transform 0.4s, opacity 0.1s;
 	transition: transform 0.4s, opacity 0.1s;
-}
+}*/
 
 .cs-style-3 figcaption a {
 	position: absolute;
@@ -204,13 +204,13 @@
 	transition: transform 0.4s;
 }
 
-.no-touch .cs-style-4 figure:hover img,
+/*.no-touch .cs-style-4 figure:hover img,
 .cs-style-4 figure.cs-hover img {
 	-webkit-transform: translateX(25%);
 	-moz-transform: translateX(25%);
 	-ms-transform: translateX(25%);
 	transform: translateX(25%);
-}
+}*/
 
 .cs-style-4 figcaption {
 	font-size: 82%;
@@ -231,7 +231,7 @@
 	transition: transform 0.4s, opacity 0.1s 0.3s;
 }
 
-.no-touch .cs-style-4 figure:hover figcaption,
+/*.no-touch .cs-style-4 figure:hover figcaption,
 .cs-style-4 figure.cs-hover figcaption {
 	opacity: 1;
 	-webkit-transform: rotateY(0deg);
@@ -240,7 +240,7 @@
 	-webkit-transition: -webkit-transform 0.4s, opacity 0.1s;
 	-moz-transition: -moz-transform 0.4s, opacity 0.1s;
 	transition: transform 0.4s, opacity 0.1s;
-}
+}*/
 
 .cs-style-4 figcaption a {
 	position: absolute;
