--- a/views/index.jade
+++ b/views/index.jade
@@ -69,9 +69,9 @@ html
       #about
       #contact
     #gallery
-      span#close_gallery X
-      span#right_img.slide_button >
-      span#left_img.slide_button <
+      span#close_gallery
+      span#right_img.slide_button
+      span#left_img.slide_button
       span#gallery_preloader
       img#gallery_img
     #copyright 
