--- a/public/app/css/main.css
+++ b/public/app/css/main.css
@@ -496,60 +496,92 @@ transform: translateY(-4px) rotate(0deg);
      -moz-box-shadow: 0 8px 6px -6px black;
           box-shadow: 0 8px 6px -6px black;
 }
+
 #gallery #close_gallery {
-  position: absolute;
-  color: white;
-  right: 10px;
-  top: 10px;
-  font-size: 32px;
-  cursor: pointer;
+    background: url('../img/close.svg') no-repeat center;
+    position: fixed;
+    top: 10px;
+    right: 10px;
+    opacity: 0.3;
+    cursor: pointer;
+    display: block;
+    height: 45px;
+    width: 45px;
+    border-radius: 50%;
+    border: 3px solid rgba(255,255,255,0);
+    -webkit-transition: 0.5s cubic-bezier(.27,1.64,.32,.95);
+    -moz-transition: 0.5s cubic-bezier(.27,1.64,.32,.95);
+    -ms-transition: 0.5s cubic-bezier(.27,1.64,.32,.95);
+    -o-transition: 0.5s cubic-bezier(.27,1.64,.32,.95);
+    transition: 0.5s cubic-bezier(.27,1.64,.32,.95);
+}
+#gallery #close_gallery:hover {
+    opacity: 1;
+    -webkit-transform: rotate(90deg);
+    -moz-transform: rotate(90deg);
+    transform: rotate(90deg);
+    border-radius: 50%;
+    border-color: rgba(255,255,255,0.3);
 }
 
+
 #gallery .slide_button {
+  z-index: 15;
+  border-radius: 5px;
+  background-color: rgba(255, 255, 255, 0.09);
   position: absolute;
   font-size: 50px;
   color: white;
-  top: 45%;
+  top: 12%;
   cursor: pointer;
+  background-repeat: no-repeat;
+  width: 111px;
+  height: 80%;
+  background-size: contain;
+  background-position-y: 50%;
+}
+#gallery .slide_button:hover {
+  background-color: rgba(255, 255, 255, 0.15);
 }
 #gallery #left_img {
   left: 15px;
+  background-image: url('../img/back.png');
 }
 #gallery #right_img {
   right: 15px;
+  background-image: url('../img/next.png');
 }
 
 #main_preloader {
-  width: 300px;
-  height: 300px;
-  border-radius: 150px;
+  width: 100px;
+  height: 100px;
+  border-radius: 50px;
   top: 50%;
   left: 50%;
-  margin-top: -150px;
-  margin-left: -150px;
+  margin-top: -50px;
+  margin-left: -50px;
   border-color: #001f3f;
 }
 #gallery #gallery_preloader {
   display: none;
-  width: 200px;
+  width: 80px;
   border-left: 3px solid #FF4136;
   border-right: 3px solid #FF4136;
-  height: 200px;
+  height: 80px;
   left: 50%;
   top: 50%;
-  margin-top: -100px;
-  margin-left: -100px;
-  border-radius: 100px;
+  margin-top: -40px;
+  margin-left: -40px;
+  border-radius: 40px;
 }
 
 #gallery #gallery_preloader, #main_preloader {
   position: absolute;
   border-top: 3px solid;
   border-bottom: 3px solid;
-  -webkit-animation: spiner 1.5s linear infinite;
-          animation: spiner 1.5s linear infinite; 
+  -webkit-animation: spiner 0.5s linear infinite;
+          animation: spiner 0.5s linear infinite; 
 }
-
 
 @-webkit-keyframes spiner {
     0%   {
