--- a/public/app/css/load_more.css
+++ b/public/app/css/load_more.css
@@ -15,7 +15,7 @@
 	display: inline-block;
 	margin: 15px 25px;
 	outline: none;
-	color: #fff;
+	/*color: #fff;*/
 	text-decoration: none;
 	text-transform: uppercase;
 	letter-spacing: 1px;
