--- a/views/index.jade
+++ b/views/index.jade
@@ -61,6 +61,14 @@ html
         .load_more_section.preloader-anim
           nav.cl-effect-12-1
             a Load More
+      #kids
+        ul.image_container.grid.cs-style-4
+        .load_more_section
+          nav.load_more.cl-effect-12
+            a Load More
+        .load_more_section.preloader-anim
+          nav.cl-effect-12-1
+            a Load More
       #commercial
       #about
       #contact
