--- a/public/app/css/media.css
+++ b/public/app/css/media.css
@@ -1,18 +1,8 @@
-@media(min-width:768px) {
-  .image_container {
-    top: 0;
-    margin-top: 0; 
+@media (max-height: 600px) {
+  .image_container li figure div {
+    max-height: 250px !important;
   }
-  .load_more_section {
-    padding-bottom: 0px;
-  }
-}
-@media(max-width:768px) {
-  .image_container {
-    top: 50%;
-    margin-top: 200px; 
-  }
-  .load_more_section {
-    padding-bottom: 20px;
+  .image_container li figure div img {
+    max-height: 250px !important;
   }
 }
