--- a/views/index.jade
+++ b/views/index.jade
@@ -7,6 +7,7 @@ html
     link(rel='stylesheet', type='text/css', href='/app/css/component.css')
     link(rel='stylesheet', type='text/css', href='/app/css/main_slide_main.css')
     link(rel='stylesheet', type='text/css', href='/app/css/load_more.css')
+    link(rel='stylesheet', type='text/css', href='/app/css/media.css')
 
     link(rel='stylesheet', type='text/css', href='/app/css/gallery_main.css')
     link(rel='stylesheet', type='text/css', href='/app/css/gallery_component.css')
