--- a/public/app/css/gallery_component.css
+++ b/public/app/css/gallery_component.css
@@ -8,8 +8,8 @@ body {
 
 .isolayer {
 	position: absolute;
-	top: 0;
-	left: 0;
+/*	top: 10%;
+	left: -12%;*/
 	-webkit-transform-origin: 50% 100%;
 	transform-origin: 50% 100%;
 }
@@ -30,47 +30,38 @@ body {
 
 .grid li {
 	cursor: pointer;
+	margin-top: -25px !important;
 }
 
-.grid__item {
+/*.grid__item {
 	width: 300px;
 }
-
-.grid__item p.kids {
+*/
+.grid__item p {
 	position: absolute;
     color: #afbe9a;
-    right: -28%;
-    top: 69%;
-    font-size: 53px;
+    font-size: 200%;
+    left: 102%;
+    top: 23%;
 }
+/*.grid__item p.kids {
+    top: 86%;
+}*/
+/*
 .grid__item p.photoshoot {
-	position: absolute;
-    color: #afbe9a;
 	right: -75%;
     top: 12%;
-    font-size: 53px;
 }
 .grid__item p.products {
-	position: absolute;
-    color: #afbe9a;
     right: -56%;
     top: 9%;
-    font-size: 53px;
 }
 .grid__item p.widding_day {
-	position: absolute;
-    color: #afbe9a;
     right: -78%;
     top: 23%;
-    font-size: 53px;
 }
 .grid__item p.others {
-	position: absolute;
-    color: #afbe9a;
-    right: -42%;
-    top: 23%;
-    font-size: 53px;
-}
+}*/
 
 .js .grid__item {
 	-webkit-backface-visibility: hidden;
@@ -78,12 +69,14 @@ body {
 }
 
 .grid__link {
+	height: 75%;
 	position: relative;
 	z-index: 1;
 	display: block;
 }
 
 .grid__img {
+	height: 100%;
 	display: block;
 	max-width: 100%;
 }
@@ -163,8 +156,8 @@ body {
 }
 
 .isolayer--deco1 {
-	width: 1200px;
-	height: 900px;
+	width: 100%;
+	height: 100%;
 }
 
 .isolayer--deco1 .grid__link .layer:first-child:not(img) {
@@ -180,21 +173,17 @@ body {
 }
 
 .isolayer--deco1 .grid__link div.layer {
-	width: 370px;
-	height: 270px;
+	width: 100%;
+	height: 100%;
 	opacity: 0.4;
 }
 
 .isolayer--deco1 .grid__item {
-	width: 400px;
-	height: 300px;
-	padding: 15px;
+    width: 14%;
+    height: 34%;
+    padding: 15px;
 }
 
-
-.isolayer--deco1 .grid__item:first-child a {
-	top: 143px;
-}
 .isolayer--deco1 .grid__item:nth-child(2) {
 	margin-top: 150px;
 }
@@ -413,6 +402,9 @@ body {
 /* my code */
 
 ul.grid--loaded {
-	left: 168px;
-    top: 125px;
+/*	left: 19%;
+    top: 20%;*/
+    left: 6%;
+    top: 420px;
+    height: 100%;
 }
