--- a/views/index.jade
+++ b/views/index.jade
@@ -12,13 +12,13 @@ html
     link(rel='stylesheet', type='text/css', href='/app/css/gallery_main.css')
     link(rel='stylesheet', type='text/css', href='/app/css/gallery_component.css')
     // for fb analitics
-    meta(property='og:url', content='http://khurshudyan.com')
-    meta(property='og:type', content='website')
-    meta(property='og:title', content='KhurshudyanPhoto')
-    meta(property='og:updated_time', content='1465679659')
-    meta(property='fb:admins', content='100001332895153')
-    meta(property='og:image', name='image', content="/app/img/fb_share.jpg")
-    meta(property='fb:app_id', content='138460513240067')
+    //- meta(property='og:url', content='http://khurshudyan.com')
+    //- meta(property='og:type', content='website')
+    //- meta(property='og:title', content='KhurshudyanPhoto')
+    //- meta(property='og:updated_time', content='1465679659')
+    //- meta(property='fb:admins', content='100001332895153')
+    //- meta(property='og:image', name='image', content="/app/img/fb_share.jpg")
+    //- meta(property='fb:app_id', content='138460513240067')
     script(type='text/javascript', data-main='/app/js/app.js', src='/app/vendor/require/require.js')
   body
     //- .container
