--- a/public/app/css/gallery_component.css
+++ b/public/app/css/gallery_component.css
@@ -404,7 +404,8 @@ body {
 ul.grid--loaded {
 /*	left: 19%;
     top: 20%;*/
-    left: 6%;
-    top: 420px;
+	left: 50%;
+    margin-left: -50%;
+    top: 500px;
     height: 100%;
 }
